@@ -36,139 +36,14 @@ Copyright 2010 by TalkingTrends (Amsterdam, The Netherlands)
   <groupId>com.blazegraph</groupId>
   <artifactId>bigdata-jini</artifactId>
   <version>1.5.3-master-SNAPSHOT</version>
-  <name>Blazegraph JINI (HA and Scaleout)</name>
+  <name>Blazegraph JINI (Scaleout)</name>
   <packaging>jar</packaging>
 
-    <profiles>
-     <profile>
-      <id>localZookeeper</id>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-       </activation>
-       <properties>
-	<zookeeper.Installation>${local.test.zookeeper.installDir}</zookeeper.Installation>
-        <log4j.configuration>src/test/resources/logging/log4j.properties</log4j.configuration>
-       </properties>
-     </profile>
-     <profile>
-      <id>testZookeeper</id>
-      <activation>
-        <activeByDefault>false</activeByDefault>
-        <property>
-          <name>TEST_ZOOKEEPER_HOME</name>
-        </property>
-       </activation>
-       <properties>
-	<zookeeper.Installation>${env.TEST_ZOOKEEPER_HOME}</zookeeper.Installation>
-        <log4j.configuration>src/test/resources/logging/log4j.properties</log4j.configuration>
-       </properties>
-     </profile>
-    </profiles>
+  <profiles>
+  </profiles>
 
   <build>
     <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>2.6</version>
-        <executions>
-          <execution>
-            <goals>
-              <goal>test-jar</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>properties-maven-plugin</artifactId>
- 	<version>1.0-alpha-2</version>
-        <executions>
-           <!-- Associate the read-project-properties goal with the initialize phase, to read the properties file. -->
-          <execution>
-            <phase>initialize</phase>
-            <goals>
-              <goal>read-project-properties</goal>
-            </goals>
-            <configuration>
-              <files>
-                <file>testServices.properties</file>
-              </files>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.18.1</version>
-        <configuration>
-         <basedir>${basedir}</basedir>
-         <argLine>-server -ea -Xms512m -Xmx8g -XX:+UseMembar -XX:MaxPermSize=500m -Djavadoc=true -Djava.net.preferIPv4Stack=${java.net.preferIPv4Stack} -Djava.security.manager -Djava.security.policy=${java.security.policy} -Dtest.zookeeper.clientPort=${test.zookeeper.clientPort} -Dtest.zookeeper.tickTime=${test.zookeeper.tickTime} -Dlog4j.configuration=${log4j.configuration} -Dtest.zookeeper.installDir=${zookeeper.Installation}</argLine>
-	 <forkCount>2</forkCount>
-         <reuseForks>true</reuseForks>
-         <printSummary>false</printSummary>
-         <disableXmlReport>false</disableXmlReport>
-        </configuration>
-      </plugin>
-      <plugin>
-           <artifactId>maven-antrun-plugin</artifactId>
-           <version>1.6</version>
-           <executions>
-             <execution>
-  	       <id>start-zookeeper</id>
-	       <goals>
-                 <goal>run</goal>
-               </goals>
-               <phase>process-test-resources</phase>
-               <configuration>
-                 <target>
-                   <ant antfile="build.xml" target="preTestPreparation"/>
-                 </target>
-               </configuration>
-             </execution>
-             <execution>
-  	       <id>stop-zookeeper</id>
-	       <goals>
-		<goal>run</goal>
-	       </goals>
-               <phase>test</phase>
-               <configuration>
-                 <target>
-                   <ant antfile="build.xml" target="postTestCleanup"/>
-                 </target>
-               </configuration>
-             </execution>
-           </executions>
-         </plugin>
-        <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-dependency-plugin</artifactId>
-        <version>2.10</version>
-        <executions>
-          <execution>
-            <id>copy</id>
-            <phase>compile</phase>
-            <goals>
-              <goal>copy</goal>
-            </goals>
-            <configuration>
-              <artifactItems>
-                <artifactItem>
-                  <groupId>com.blazegraph</groupId>
-                  <artifactId>bigdata-war-html</artifactId>
-                  <version>${project.version}</version>
-                  <type>war</type>
-                  <overWrite>true</overWrite>
-                  <outputDirectory>target</outputDirectory>
-                  <destFileName>bigdata.war</destFileName>
-                </artifactItem>
-              </artifactItems>
-              <!-- other configurations here -->
-            </configuration>
-          </execution>
-        </executions>
-        </plugin>
     </plugins>
   </build>
 
@@ -214,17 +89,6 @@ ga('send', 'pageview');
   </repositories>
 
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>${junit3.version}</version>
-      <scope>test</scope>
-    </dependency>
-     <dependency>
-      <groupId>com.blazegraph</groupId>
-      <artifactId>junit-ext</artifactId>
-      <version>${junit-ext.version}</version>
-    </dependency>
      <dependency>
       <groupId>com.blazegraph</groupId>
       <artifactId>bigdata-client</artifactId>
@@ -243,34 +107,8 @@ ga('send', 'pageview');
     </dependency>
     <dependency>
       <groupId>com.blazegraph</groupId>
-      <artifactId>bigdata-core-test</artifactId>
+      <artifactId>bigdata-zookeeper</artifactId>
       <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>com.blazegraph</groupId>
-      <artifactId>bigdata-core-test</artifactId>
-      <version>${project.version}</version>
-      <type>test-jar</type>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.blazegraph</groupId>
-      <artifactId>bigdata-rdf-test</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>com.blazegraph</groupId>
-      <artifactId>bigdata-rdf-test</artifactId>
-      <version>${project.version}</version>
-      <type>test-jar</type>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.blazegraph</groupId>
-      <artifactId>bigdata-core-test</artifactId>
-      <version>${project.version}</version>
-      <type>test-jar</type>
-      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.zookeeper</groupId>
